# final

./: CMakeLists.txt
lab2/: box.frag  box.vert  final.cpp  final_debug.cpp  lab2_building.cpp  lab2_skybox.cpp  lit_box.frag  lit_box.vert  shadow_depth.vert  skybox.frag  test.cpp  trees.cpp
lab2/Person/: person.h
